# Tag-Game

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
.cache/clangd/index/: context.c.95E83A6926D3EB7D.idx  display.cpp.84FA12157E1D6882.idx  display.h.DC1B0C5ACAD25FC4.idx  egl_context.c.51A6CDE742FBB6B8.idx  glew.c.CF5BBB6417FAE645.idx  glew.h.305E7A1C689E33DD.idx  glewinfo.c.2EEBE13799B344D3.idx  glfw3.h.05A04E7B218FA7E0.idx  glfw3native.h.2C50C3F76B7D3895.idx  glx_context.c.4180307126322777.idx  glxew.h.9B6EA9527C057469.idx  init.c.172A70AAFCFA6D75.idx  input.c.14B52A3D7D0ABEE9.idx  internal.h.45A4A7BDF254DCEA.idx  linux_joystick.c.AE8ABC6F7F9AC181.idx  linux_joystick.h.9C2DA25A494059F3.idx  main.cpp.2C03345A0A24AD4F.idx  mappings.h.AB879D1CFCADFD5A.idx  monitor.c.1778B91E06109455.idx  null_init.c.7E1667DF61032F47.idx  null_joystick.c.7A0A5A75FA18DE6F.idx  null_joystick.h.314183B224CC9579.idx  null_monitor.c.3A3E82F5AAD540D7.idx  null_platform.h.530FD94BF5E9F295.idx  null_window.c.C5634C2AF790F88C.idx  osmesa_context.c.8CE8A09D3239EA15.idx  platform.c.10AA2A2D7ADE6DD4.idx  platform.h.EAB2BFA531D5FB99.idx  posix_module.c.C68CD8A89EB0AC8C.idx  posix_poll.c.67584E3F027E173A.idx  posix_poll.h.181D506ABCB54F47.idx  posix_thread.c.3BE6A909DF932099.idx  posix_thread.h.926540088C656D26.idx  posix_time.c.479746D5D3FF26D9.idx  posix_time.h.46E4A4B47CD7DDB4.idx  shader.cpp.0A6CB8819FB7E42A.idx  shader.h.F546AA34BD972761.idx  stitch.h.FCF966473241182D.idx  visualinfo.c.D2518B6D037D8AE6.idx  vulkan.c.00A86400B932A6D3.idx  (+11 more)
res/shaders/: basic.shader  texture.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  ShaderCherno.cpp  ShaderCherno.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  debugger.cpp  main.cpp
